--- a/src/assets/themes/palette.css
+++ b/src/assets/themes/palette.css
@@ -7,6 +7,7 @@
   --main-color-transparent-2: rgba(168, 118, 255, 0.2);
   --boarder-system-color: rgb(219, 219, 219);
   --sales-color: rgb(174, 20, 20);
+  --errors-color: rgb(200, 0, 0);
   --color-brand: rgb(116, 35, 255);
   --color-brand-hover: rgb(96, 31, 208);
 
