--- a/src/Pages/Cart/Cart.module.scss
+++ b/src/Pages/Cart/Cart.module.scss
@@ -255,6 +255,7 @@
         font-weight: 500;
         border-radius: 5px;
         border: none;
+        transition: .3s;
 
         &.unabled {
             background-color: gainsboro;
