--- a/src/Pages/Main/ShopPanel/ShopFilters/ShopFilters.module.scss
+++ b/src/Pages/Main/ShopPanel/ShopFilters/ShopFilters.module.scss
@@ -29,59 +29,15 @@
         }
 
         .checkbox {
-            position: relative;
-            width: 20px;
-            height: 20px;
-            margin-right: 15px;
-        }
+            .checkboxLabel:before {
+                border: 1px solid var(--boarder-system-color);
+            }
 
-        .checkboxInput {
-            appearance: none;
-            position: absolute;
-        }
-
-        .checkboxLabel:before {
-            content: "";
-            display: block;
-            width: 20px;
-            height: 20px;
-
-            border: 1px solid var(--boarder-system-color);
-            background-color: rgb(255, 255, 255);
-            border-radius: 10%;
-
-            position: absolute;
-            z-index: 1;
-        }
-
-        .checkboxItem:hover .checkboxLabel:before {
-            border-color: var(--main-color);
-            transition: 0.3s;
-        }
-
-        .checkboxLabel:after {
-            cursor: pointer;
-            content: "";
-            display: block;
-            width: 20px;
-            height: 20px;
-
-            background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRzyiSikxjLhftW55OLmMD8OjFVeLo5LAkL774QC4p4g&s");
-            background-size: 20px 20px;
-            opacity: 0;
-
-            position: absolute;
-            z-index: 2;
-        }
-
-        .checkboxInput:checked+.checkboxLabel:before {
-            background-color: var(--main-color);
-        }
-
-        .checkboxInput:checked+.checkboxLabel:after {
-            opacity: 1;
-            border: 1px solid black;
-            border-radius: 10%;
+            &:hover {
+                .checkboxLabel:before {
+                    border: 1px solid var(--main-color);
+                }
+            }
         }
 
         .checkboxText {
