--- a/src/assets/themes/palette.css
+++ b/src/assets/themes/palette.css
@@ -1,8 +1,17 @@
 :root {
+  --disabled-gray: rgb(219, 219, 219);
+  --disabled-gray-2: rgb(189, 189, 189);
+  --light-gray: rgb(235, 235, 235);
+  --gray: rgb(179, 179, 179);
+  --dark-gray: rgb(130, 130, 130);
+  --black: rgb(0, 0, 0);
+  --light-black: rgb(87, 87, 87);
+  --white: rgb(255, 255, 255);
+  --main-color: rgb(168, 118, 255);
+
   --boarder-hover-color: rgb(116, 35, 255);
   --icon-hover-color: rgb(116, 35, 255);
   --default-head-menu-color: rgb(116, 35, 255);
-  --main-color: rgb(168, 118, 255);
   --main-color-transparent: rgba(168, 118, 255, 0.5);
   --main-color-transparent-2: rgba(168, 118, 255, 0.2);
   --boarder-system-color: rgb(219, 219, 219);
@@ -10,11 +19,14 @@
   --errors-color: rgb(200, 0, 0);
   --color-brand: rgb(116, 35, 255);
   --color-brand-hover: rgb(96, 31, 208);
+  --input-border: var(--gray);
+  --input-focus: var(--main-color);
+  --input-placeholder: var(--gray);
+  --input-disabled-bc: var(--dark-gray);
+  --input-disabled-bg: var(--disabled-gray-2);
 
-  --disabled-gray: rgb(219, 219, 219);
-  --black: #000000;
-  --light-black: #575757;
-  --white: #ffffff;
+  --scrollbar-thumb: var(--main-color);
+  --scrollbar-track: var(--disabled-gray-2);
 
   --rad: 20px;
   --dur: 0.3s;
