--- a/src/Pages/Authorization/Auth.module.scss
+++ b/src/Pages/Authorization/Auth.module.scss
@@ -22,8 +22,7 @@
 }
 
 .authWrapper {
-    margin-top: 100px;
-    width: 400px;
+    width: 450px;
     box-sizing: border-box;
     color: var(--main-color);
     background-color: rgb(249, 248, 248);
@@ -34,6 +33,14 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+
+    &-signUp {
+        margin-top: 20px;
+    }
+
+    &-signIn {
+        margin-top: 120px;
+    }
 
     &.hidden {
         display: none;
@@ -78,6 +85,29 @@
         transform: translateY(-50%);
     }
 
+    .checkboxWrapper {
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        .checkboxText {
+            cursor: pointer;
+            transition: .3s;
+            
+            &:hover {
+                color: var(--color-brand-hover);
+            }
+        }
+
+        .error {
+            position: absolute;
+            bottom: -16px;
+            left: 10px;
+            font-size: 13px;
+            color: var(--errors-color);
+        }
+    }
+
     .errorExist {
         font-size: 13px;
         color: var(--errors-color);
@@ -85,23 +115,10 @@
     }
 
     .btn {
-        width: 100%;
         height: 40px;
-        background: none;
-        border: none;
-        background: var(--main-color);
         border-radius: 40px;
-        font-size: 20px;
         font-weight: bold;
-        font-family: var(--ptsans-font);
-        color: white;
         margin-top: 8px;
-
-        &:hover {
-            background-color: var(--boarder-hover-color);
-            cursor: pointer;
-            transition: 0.3s;
-        }
     }
 }
 
@@ -111,7 +128,7 @@
     gap: 8px;
     text-align: center;
     align-items: center;
-    width: 400px;
+    width: 450px;
     box-sizing: border-box;
     border: 0.5px solid rgb(222, 221, 221);
     border-radius: 5px;
