--- a/src/assets/components/Checkbox/Checkbox.module.scss
+++ b/src/assets/components/Checkbox/Checkbox.module.scss
@@ -3,6 +3,7 @@
     width: 20px;
     height: 20px;
     margin-right: 15px;
+    flex-shrink: 0;
 
     .checkboxInput {
         appearance: none;
