--- a/src/Pages/Admin/Admin.module.scss
+++ b/src/Pages/Admin/Admin.module.scss
@@ -12,4 +12,7 @@
     display: flex;
     margin-top: 40px;
     justify-content: center;
+    max-width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
 }
