added main admin structure

--- a/src/assets/components/Tabs/Tabs.module.scss
+++ b/src/assets/components/Tabs/Tabs.module.scss
@@ -56,7 +56,7 @@
 
 .tabs-content {
     height: max-content;
-    overflow-y: auto;
+    // overflow-y: auto;
     scrollbar-width: none;
     border-top: 1px solid var(--disabled-gray);
     padding-top: 40px;
