added admin message prop for orders

--- a/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
@@ -188,9 +188,14 @@
         }
     }
 
-    .bolder {
+    .bolder,
+    .message {
         font-weight: 500;
         margin-left: 8px;
+    }
+
+    .message {
+        color: var(--main-color);
     }
 }
 
