--- a/src/Pages/Admin/OrdersPanel/OrderForm/OrderForm.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrderForm/OrderForm.module.scss
@@ -10,8 +10,56 @@
 .formWrapper {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    gap: 24px;
     margin-top: 40px;
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+
+    svg {
+        height: 24px !important;
+    }
+
+    .formTitle {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .title {
+            font-size: 24px;
+            font-weight: 700;
+            color: var(--light-black);
+        }
+    }
+
+    .modifyWrapper {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+
+        span {
+            font-size: 14px;
+            font-weight: 500;
+            color: var(--gray-purple);
+        }
+    }
+
+    .fieldsWrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 28px;
+
+        .dropdownList {
+            background-color: var(--white);
+        }
+    }
+
+    .btnsWrapper {
+        display: flex;
+        align-items: center;
+        gap: 24px;
+        margin-top: 8px;
+    }
 }
