--- a/src/assets/themes/palette.css
+++ b/src/assets/themes/palette.css
@@ -4,6 +4,7 @@
   --light-gray: rgb(235, 235, 235);
   --gray: rgb(179, 179, 179);
   --dark-gray: rgb(130, 130, 130);
+  --gray-purple: rgb(184, 173, 190);
   --black: rgb(0, 0, 0);
   --light-black: rgb(87, 87, 87);
   --white: rgb(255, 255, 255);
