--- a/src/Pages/Admin/OrdersPanel/OrderForm/OrderForm.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrderForm/OrderForm.module.scss
@@ -26,12 +26,12 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+    }
 
-        .title {
-            font-size: 24px;
-            font-weight: 700;
-            color: var(--light-black);
-        }
+    .title {
+        font-size: 24px;
+        font-weight: 700;
+        color: var(--light-black);
     }
 
     .modifyWrapper {
@@ -61,5 +61,97 @@
         align-items: center;
         gap: 24px;
         margin-top: 8px;
+    }
+}
+
+.orderInfoWrapper {
+    margin-top: 20px;
+    padding: 50px 0;
+    border-top: 3px dashed var(--gray-purple);
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+
+    .orderInfo {
+        display: flex;
+        width: 90%;
+
+        .info {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            width: 50%;
+            padding-right: 80px;
+
+            span {
+                color: var(--light-black);
+                line-height: 20px;
+                word-break: break-word;
+                overflow-wrap: break-word;
+            }
+
+            .bolder {
+                font-weight: 500;
+            }
+        }
+
+        .books {
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            width: 50%;
+            flex-shrink: 0;
+
+            .booksTitle {
+                font-weight: 500;
+                color: var(--light-black);
+            }
+
+            .booksWrapper {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 12px;
+
+                .bookRow {
+                    width: calc(50% - 6px);
+                    display: flex;
+                    gap: 16px;
+                    height: fit-content;
+
+                    .productImage {
+                        max-width: 80px;
+                        // height: 100%;
+                    }
+
+                    .bookInfo {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 8px;
+                        padding: 8px 16px 8px 0;
+                        justify-content: space-between;
+
+                        .bookTitle {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 8px;
+                        }
+
+                        &Name {
+                            font-weight: 500;
+                        }
+
+                        &Count {
+                            font-weight: 500;
+                            color: var(--main-color);
+                        }
+
+                        span {
+                            word-break: break-word;
+                            overflow-wrap: break-word;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
