added type prop for input

--- a/src/assets/components/Input/Input.module.scss
+++ b/src/assets/components/Input/Input.module.scss
@@ -66,6 +66,12 @@
             color: var(--input-placeholder);
         }
     }
+
+    .input[type=number]::-webkit-inner-spin-button,
+    .input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
 }
 
 .error-message {
