fix position of mail checkbox in book admin panel

--- a/src/Pages/Admin/BooksPanel/BooksPanel.module.scss
+++ b/src/Pages/Admin/BooksPanel/BooksPanel.module.scss
@@ -45,6 +45,10 @@
             }
         }
 
+        .mainCheckbox {
+            top: 8px;
+        }
+
         .iconsWrapper {
             position: absolute;
             left: 101%;
