--- a/src/assets/components/ButtonAdmin/ButtonAdmin.module.scss
+++ b/src/assets/components/ButtonAdmin/ButtonAdmin.module.scss
@@ -72,7 +72,7 @@
 
     &-outline-gray {
         color: var(--gray);
-        border: 1px solid var(--main-color);
+        border: 1px solid var(--gray);
         padding: 4px 28px;
         height: fit-content;
 
