--- a/src/Pages/Admin/UsersPanel/UsersPanel.module.scss
+++ b/src/Pages/Admin/UsersPanel/UsersPanel.module.scss
@@ -50,9 +50,24 @@
     }
 
     .headerRow {
+        cursor: default;
+        
         span {
             font-weight: 600;
             font-size: 18px;
+            transition: .3s;
+        }
+
+        .sortField {
+            cursor: pointer;
+
+            &:hover {
+                color: var(--icon-hover-color);
+            }
+        }
+
+        .sortedField {
+            color: var(--icon-hover-color);
         }
     }
 
