--- a/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
@@ -95,6 +95,19 @@
         span {
             font-weight: 600;
             font-size: 18px;
+            transition: .3s;
+        }
+
+        .sortField {
+            cursor: pointer;
+
+            &:hover {
+                color: var(--icon-hover-color);
+            }
+        }
+
+        .sortedField {
+            color: var(--icon-hover-color);
         }
     }
 
