added common orders number, simplified the search for orders and the display of numbers for the user

--- a/src/Pages/Admin/Statistics/Statistics.module.scss
+++ b/src/Pages/Admin/Statistics/Statistics.module.scss
@@ -1,6 +1,12 @@
 .statisticsWrapper {
     display: flex;
     flex-direction: column;
+    gap: 40px;
+}
+
+.statisticsRecord {
+    display: flex;
+    flex-direction: column;
     gap: 28px;
     font-size: 18px;
     color: var(--black);
