--- a/src/Pages/Main/ShopPanel/ShopContent/ShopContent.module.scss
+++ b/src/Pages/Main/ShopPanel/ShopContent/ShopContent.module.scss
@@ -16,10 +16,12 @@
     justify-content: space-between;
     text-align: center;
     align-items: center;
+    position: relative;
 
     .productImage {
         border: 3px solid var(--boarder-system-color);
         width: auto;
+        max-width: 200px;
     }
 
     .productImage:hover {
@@ -97,6 +99,15 @@
                 background-color: #9f2a34;
             }
         }
+    }
+
+    .badge {
+        position: absolute;
+        left: 0;
+        transform: rotate(-30deg);
+        pointer-events: none;
+        width: 60px;
+        font-size: 14px;
     }
 }
 
