added a field of availability of books and their display in the admin table

--- a/src/Pages/Admin/BooksPanel/BooksPanel.module.scss
+++ b/src/Pages/Admin/BooksPanel/BooksPanel.module.scss
@@ -40,6 +40,10 @@
         .productImage {
             max-width: 80px;
             height: 100%;
+
+            &-clear {
+                opacity: 30%;
+            }
         }
 
         .checkbox {
