--- a/src/assets/components/Modal/Modal.module.scss
+++ b/src/assets/components/Modal/Modal.module.scss
@@ -47,6 +47,7 @@
                     line-height: 20px;
                     word-break: break-word;
                     overflow-wrap: break-word;
+                    color: var(--light-black);
                 }
             }
 
