added prohibition to add books to the basket if they are unavailable

--- a/src/Pages/Cart/CartCard/CartCard.module.scss
+++ b/src/Pages/Cart/CartCard/CartCard.module.scss
@@ -72,7 +72,16 @@
 
     .btn:hover {
         cursor: pointer;
-        background-color: rgb(194, 159, 255);
+        background-color: var(--btn-hover);
+    }
+
+    .btn-disabled {
+        background-color: var(--main-color-transparent-3);
+        
+        &:hover {
+            background-color: var(--main-color-transparent-3);
+            cursor: not-allowed;
+        }
     }
 
     input {
