add some notes for ready orders

--- a/src/Pages/Orders/Orders.module.scss
+++ b/src/Pages/Orders/Orders.module.scss
@@ -50,6 +50,11 @@
             color: var(--light-black);
         }
 
+        .readyWrapper span {
+            font-weight: 600;
+            color: var(--order-ready-color);
+        }
+
         .modifyWrapper {
             display: flex;
             align-items: center;
