--- a/src/assets/themes/palette.css
+++ b/src/assets/themes/palette.css
@@ -34,6 +34,7 @@
   --scrollbar-thumb: var(--main-color);
   --scrollbar-track: var(--disabled-gray-2);
   --btn-hover: var(--main-color-light-2);
+  --order-ready-color: rgb(13, 195, 95);
 
   --badge-red-bg: var(--warning-color);
   --badge-blue-bg: rgb(132, 167, 255);
