--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -54,16 +54,7 @@
     position: relative;
 }
 
-.cart #cart {
-    position: absolute;
-    background-color: rgba(220, 220, 220, 0);
-    border: none;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-}
-
-.cart .cartCount {
+.count {
     position: absolute;
     width: 18px;
     height: 18px;
@@ -341,14 +332,14 @@
 }
 
 @media screen and (min-width: 768px) {
-    .cart .cartCount {
+    .count {
         font-size: 16px;
         left: 90%;
     }
 }
 
 @media screen and (max-width: 767.98px) {
-    .cart .cartCount {
+    .count {
         font-size: 10px;
         left: 90%;
         top: -10%;
