--- a/src/Pages/Cart/CartModal/CartModal.module.scss
+++ b/src/Pages/Cart/CartModal/CartModal.module.scss
@@ -21,9 +21,9 @@
         flex-direction: column;
         align-items: center;
         border-radius: 10px;
-        -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
-        -moz-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
-        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
+        -webkit-box-shadow: var(--modal-box-shadow);
+        -moz-box-shadow: var(--modal-box-shadow);
+        box-shadow: var(--modal-box-shadow);
 
         .crossIconWrapper {
             width: 100%;
