--- a/src/assets/components/Checkbox/Checkbox.module.scss
+++ b/src/assets/components/Checkbox/Checkbox.module.scss
@@ -17,7 +17,7 @@
         height: 20px;
 
         border: 1px solid var(--main-color);
-        background-color: rgb(255, 255, 255);
+        background-color: var(--white);
         border-radius: 10%;
 
         position: absolute;
