--- a/src/assets/components/HeaderForm/HeaderForm.module.scss
+++ b/src/assets/components/HeaderForm/HeaderForm.module.scss
@@ -18,7 +18,7 @@
 
     input[type="search"] {
         width: 100%;
-        background: white;
+        background: var(--white);
         padding: 0 40px;
         border-radius: var(--rad);
         appearance: none;
@@ -63,8 +63,8 @@
 
         +button {
             display: block;
-            color: white;
-            border: 2px solid white;
+            color: var(--white);
+            border: 2px solid var(--white);
         }
     }
 
