--- a/src/assets/components/Modal/Modal.module.scss
+++ b/src/assets/components/Modal/Modal.module.scss
@@ -22,9 +22,9 @@
         gap: 24px;
         align-items: center;
         border-radius: 10px;
-        -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
-        -moz-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
-        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.3);
+        -webkit-box-shadow: var(--modal-box-shadow);
+        -moz-box-shadow: var(--modal-box-shadow);
+        box-shadow: var(--modal-box-shadow);
 
         .modalHeader {
             width: 100%;
