--- a/src/Pages/Cart/CartCard/CartCard.module.scss
+++ b/src/Pages/Cart/CartCard/CartCard.module.scss
@@ -68,6 +68,7 @@
         font-family: Inter, sans-serif;
         width: 20px;
         text-align: center;
+        transition: .2s;
     }
 
     .btn:hover {
