--- a/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
@@ -179,7 +179,7 @@
 
                 .productImage {
                     max-width: 80px;
-                    height: fit-content;
+                    height: 100%;
                 }
 
                 .bookInfo {
