added detailed page for books, links to them

--- a/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
+++ b/src/Pages/Admin/OrdersPanel/OrdersPanel.module.scss
@@ -198,6 +198,11 @@
 
                     &Name {
                         font-weight: 500;
+                        transition: .3s;
+
+                        &:hover {
+                            color: var(--black);
+                        }
                     }
 
                     &Count {
